# harmony

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  pyproject.toml  run_checks.sh  test_python.sh
.github/actions/run-rust-python-tests/: action.yml
.github/workflows/: CI.yml
demo/harmony-demo/: .gitignore  next.config.ts  package-lock.json  package.json
demo/harmony-demo/src/app/: globals.css  layout.tsx  page.tsx
demo/harmony-demo/src/components/: HarmonyDemo.tsx
docs/: format.md  python.md  rust.md
javascript/: README.md  package.json
python/openai_harmony/: __init__.py
src/: chat.rs  encoding.rs  lib.rs  py_module.rs  registry.rs  tests.rs  tiktoken.rs  wasm_module.rs
src/tiktoken_ext/: mod.rs  public_encodings.rs
test-data/: test_browser_and_function_tool.txt  test_browser_and_python_tool.txt  test_browser_tool_only.txt  test_does_not_drop_if_ongoing_analysis.txt  test_dropping_cot_by_default.txt  test_keep_analysis_between_finals.txt  test_no_tools.txt  test_preserve_cot.txt  test_reasoning_system_message.txt  test_reasoning_system_message_no_instruction.txt  test_reasoning_system_message_with_dates.txt  test_render_functions_with_parameters.txt  test_simple_convo.txt  test_simple_convo_high_effort.txt  test_simple_convo_high_effort_no_instruction.txt  test_simple_convo_low_effort.txt  test_simple_convo_low_effort_no_instruction.txt  test_simple_convo_medium_effort.txt  test_simple_convo_medium_effort_no_instruction.txt  test_simple_reasoning_response.txt  test_simple_tool_call.txt  test_streamable_parser.txt  test_tool_response_parsing.txt
tests/: test_harmony.py
