[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "openai-harmony"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["pydantic>=2.11.7"]

[project.optional-dependencies]
demo = ["uvicorn", "fastapi"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "openai_harmony"
python-source = "python"
